# Rougelike-Game-

./: .clang-format  .clang-tidy  .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  bigProject_2  cmake_install.cmake
include/main/Components/: AttackData.hpp  BorderData.hpp  ComponentDefs.hpp  Components.hpp  CoordsInfo.hpp  ExperienceData.hpp  GridData.hpp  HealthData.hpp  InventoryData.hpp  ItemData.hpp  MenuData.hpp  MoveData.hpp  PlayerData.hpp  SpriteData.hpp  StrategyData.hpp  isBound.hpp
include/main/ECS/: Component.hpp  EngineDefs.hpp  EntitiesList.hpp  EntityManager.hpp  EventManager.hpp  FpUtility.hpp  System.hpp  SystemManager.hpp
include/main/Game/: AttackSystem.hpp  BoundSystem.hpp  CollectSystem.hpp  CollisionSystem.hpp  Constants.hpp  DiagnosticSystem.hpp  ExperienceSystem.hpp  Game.hpp  GenerateWorldSystem.hpp  InventorySystem.hpp  KeySystem.hpp  MoveSystem.hpp  RegenerationSystem.hpp  RenderSystem.hpp  StrategySystem.hpp  Utils.hpp
include/main/Game/events/: AttackEvent.hpp  AttackMobEvent.hpp  CollectEvent.hpp  CollisionEvent.hpp  GenerateWorldEvent.hpp  MapCreatedEvent.hpp  MobKilledEvent.hpp  NumEvent.hpp  RemoveFromInventoryEvent.hpp  SetValueEventInventoryEvent.hpp
include/main/Utils/: Vec2.hpp
include/main/Utils/Factories/: MapBulder.hpp  MobGenerator.hpp
include/main/Utils/MobsUtils/: Strategy.hpp
src/: main.cpp
src/Game/: AttackSystem.cpp  BoundSystem.cpp  CollectSystem.cpp  CollisionSystem.cpp  DiagnosticSystem.cpp  ExperienceSystem.cpp  GenerateWorldSystem.cpp  InventorySystem.cpp  KeySystem.cpp  MoveSystem.cpp  RegenerationSystem.cpp  RenderSystem.cpp  StrategySystem.cpp
src/Utils/Factories/: MapBuilder.cpp  MobGenerator.cpp
src/Utils/MobsUtils/: Strategy.cpp
src/main/: Data.h  main.cpp
src/main/Assets/: menu.jpg.jpg:Zone.Identifier
src/main/Components/: AttackData.hpp  ComponentDefs.hpp  Components.hpp  CoordsInfo.hpp  ExperienceData.hpp  GridData.hpp  HealthData.hpp  InventoryData.hpp  ItemData.hpp  MenuData.hpp  MoveData.hpp  PlayerData.hpp  ShapeInfo.hpp  SpriteData.hpp  StrategyData.hpp  include.hpp  isBound.hpp
src/main/ECS/: Component.hpp  Data.hpp  Engine.hpp  EngineDefs.hpp  EntitiesList.hpp  Entity.hpp  EntityManager.hpp  EventManager.hpp  FpUtility.hpp  System.hpp  SystemManager.hpp
src/main/EntityComponentSystem/: Component.hpp  ComponentManager.hpp  Data.hpp  Engine.hpp  EngineDefs.h  Entity.hpp  EntityDefs.h  EntityManager.hpp  EventManager.hpp  FpUtility.hpp  System.hpp  SystemManager.hpp
src/main/Game/: AttackMobSystem.hpp  AttackSystem.hpp  BoundSystem.hpp  CollectSystem.hpp  CollisionSystem.hpp  Constants.hpp  DiagnosticSystem.hpp  ExperienceSystem.hpp  Game.hpp  GameDefs.hpp  GenerateMapSystem.hpp  GenerateMobSystem.hpp  GeneratePlayerSystem.hpp  GenerateSystem.hpp  InventorySystem.hpp  KeySystem.hpp  MoveSystem.hpp  RegenerationSystem.hpp  RenderSystem.hpp  StrategySystem.hpp  Utils.hpp
src/main/Game/Mobs/: CreateEvent.hpp  GenerateSystem.hpp  KeySystem.hpp  MoveSystem.hpp  RenderSystem.hpp  include.hpp
src/main/Game/Player/: GeneratePlayer.hpp  PlayerEntity.hpp  PlayerMoveSystem.hpp
src/main/Game/events/: AttackEvent.hpp  AttackMobEvent.hpp  ChangedMoveEvent.hpp  CollectEvent.hpp  CollisionEvent.hpp  LeftMouseEvent.hpp  MobKilledEvent.hpp  NumEvent.hpp  SetValueEventInventoryEvent.hpp
src/main/Utils/: Vec2.hpp
src/main/Utils/Factories/: MapBulder.hpp  (+2 more)
src/main/include/: Character.hpp  Constants.hpp  Player.hpp  PlayerController.hpp  textures.hpp
src/main/src/: Character.cpp  Player.cpp  PlayerController.cpp
(+2 files in other folders)
